# Erable

./: README.md  me.alee14.erable.json  meson.build
data/: me.alee14.erable.appdata.xml.in  me.alee14.erable.desktop.in  me.alee14.erable.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: erable-application.c  erable-application.h  erable-window.c  erable-window.h  erable-window.ui  erable.gresource.xml  main.c  meson.build
